--- a/Changelog.txt
+++ b/Changelog.txt
@@ -211,4 +211,12 @@
 	CHG: ZEMath Invert function temporary implemented used D3DX helper functions.
 	
 [30 March 2010 - Revision 141]
-  REM: MapVector and MapQuaternion macros removed.
+	REM: MapVector and MapQuaternion macros removed.
+
+[30 March 2010 - Revision 142]
+	ADD: Custom build step added to ParticleEmitter.h and PArticleSystem.h postprocessor.
+	CHG: ZEParticleEmitter integrated to meta system.
+	CHG: ZEParticleSystem integrated to meta system.
+	ADD: ZEParticleEffectBrush::GetParticleEffect() const function added.
+	ADD: ZEParticleEffect::GetSystemArray() const function added.
+	CHG: ZEParticleEmitter Getter functions are now const functions.
