--- a/Changelog.txt
+++ b/Changelog.txt
@@ -238,5 +238,7 @@
 	REM: Custom build steps (zepp.exe) in spesific header files has been removed.
 	REM: genheader.exe (source file header generator), verman.exe (version manager) and their input files has been removed from postprocess directory. They are replaced by ZELicensePostProcessor in zepp utility.
 
-[7 April 2010 - Revision 146]
+[7 April 2010 - Revision 146, 147]
 	CHG: ZEEntity::Initialize now returns bool.
+	FIX: ZEComponent DirtyFlag overwrite bugs fixed.
+	FIX: Major drawing bug fixes in ZEParticle sub-system.
