ADD: Group name added to Property.h
svn path=/trunk/; revision=151

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -254,3 +254,5 @@
 	ADD: ZECanvas::SetTranslation, ZECanvas::SetRotation and ZECanvas::SetScale functions are added. These function control the transformation that will be applied to the new shapes.
 	FIX: ZESimpleMaterial ZE_ROF_ENABLE_WORLD_TRANSFORM and ZE_ROF_ENABLE_VIEW_PROJECTION_TRANSFORM has been fixed.
 	
+[13 April 2010 - Revision 151]
+	ADD: Group name added to Property.h
