--- a/Changelog.txt
+++ b/Changelog.txt
@@ -260,3 +260,7 @@
 [15 April 2010 - Revision 153]
 	CHG: ZE_PS_COLOR added to some properties at FixedMaterial.h
 	FIX: ZEPArticleSystem::ZEPArticleSystem() now sets its material to zero. 
+	
+[19 April 2010 - Revision 154 - Orcun]
+  FIX: ZEClass::GetPropertyId (and also GetProperty and SetProperty) gives errorneus output because of the generated binary search code of ZEPostProcessor utility.
+  CHG: ZEPostProcessor utility updated.
