ADD: AddTriangle and AddWireframeTriangle added to ZECanvas.
svn path=/trunk/; revision=161

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -276,7 +276,9 @@
 [21 April 2010 - Revision 158 - Orcun]
 	ADD: ZELine, ZERay, ZELineSegment MinimumDistance methods completed but not tested.
 
-[25 April 2010 - Revision 159 - Orcu]
-  FIX: ZELineSegment ZERay MinimumDistance functions negative TRay and TLineSegment fixed.
-  CHG: ZECanvas::Clear now also clears transformation stack and sets current transformation to identity transformation.
-  
+[25 April 2010 - Revision 159 - Orcun]
+	FIX: ZELineSegment ZERay MinimumDistance functions negative TRay and TLineSegment fixed.
+	CHG: ZECanvas::Clear now also clears transformation stack and sets current transformation to identity transformation.
+
+[26 April 2010 - Revision 161 - Orcun]
+	ADD: AddTriangle and AddWireframeTriangle added to ZECanvas.
