--- a/Changelog.txt
+++ b/Changelog.txt
@@ -280,5 +280,7 @@
 	FIX: ZELineSegment ZERay MinimumDistance functions negative TRay and TLineSegment fixed.
 	CHG: ZECanvas::Clear now also clears transformation stack and sets current transformation to identity transformation.
 
-[26 April 2010 - Revision 161 - Orcun]
+[26 April 2010 - Revision 161, 162 - Orcun]
 	ADD: AddTriangle and AddWireframeTriangle added to ZECanvas.
+	ADD: operator* overload added to ZEMatrix4x4 for ZEVector3 and ZEVector4 types.
+	ADD: ZEMatrix::Transform ZEVector4 overload has been implamented.
