--- a/Changelog.txt
+++ b/Changelog.txt
@@ -285,6 +285,16 @@
 	ADD: operator* overload added to ZEMatrix4x4 for ZEVector3 and ZEVector4 types.
 	ADD: ZEMatrix::Transform ZEVector4 overload has been implamented.
 
-[27 April 2010 - REvision 163 - Orcun]
+[27 April 2010 - Revision 163 - Orcun]
 	FIX: ZEModel's bone animation interpolation has been fixed.
 	ADD: CheckParent method added to ZEClassDescription. CheckParent method is used for checking a class parent.
+	
+[30 April 2010 - Revision 164 - Orcun]
+	FIX: ZEString UTF8 buffer memory leak fixed.
+	FIX: ZEError FileLogging problem fixed.
+	FIX: ZEConsole InputEnabled property initial value problem fixed.
+	FIX: ZEOption Changed state initial value problem fixed.
+	FIX: ZEEntity Velocity initial frame calculation fixed.
+	FIX: ZEModel bounding box calculation bug fixed.
+	FIX: ZED3D9FixedMaterial RenderOrder ZE_ROF_ENABLE_WORLD_TRANSFORM flag problem fixed.
+	FIX: PointLight and Directional Light skinned vertex shader vertex position miscalculation problem fixed.
