--- a/Changelog.txt
+++ b/Changelog.txt
@@ -325,3 +325,7 @@
 	REM: Portal brushes removed from ZEMap file.
 	ADD: ZEPortalMapOctree component added.
 	
+[12 May 2010 - Revision 183 - Orcun]
+	FIX: ZEPortalMap file structures fixed.
+	ADD: Major improvements on ZEPortalMap.
+	FIX: ZEPortalMap file has been loaded.
