--- a/Changelog.txt
+++ b/Changelog.txt
@@ -320,4 +320,7 @@
 	FIX: ZEEntity::GetWorldBoundingBox() DirtyFlag bug fixed.
 	FIX: ZEError::LogFileName initial termination escape character bug fixed.
 	FIX: ZEAABoundingBox::IntersectionTest point version has been fixed.
-	
+
+[19 May 2010 - Revision 200 - Hakan]
+	ADD: Trigger.cpp & Trigger.h added.
+	ADD: ZETrigger registered to Game.	
