--- a/Changelog.txt
+++ b/Changelog.txt
@@ -344,3 +344,10 @@
 	CHG: ZEDebugComponent renamed to ZEDebugModule and became ZEModule.
 	CHG: DebugComponnent folder renamed to Debug.
 	CHG: ZEDebugModule moved to Debug folder.
+	
+[22 May 2010 - Revision 202 - Orcun]
+	ADD: Debug rendering capabilities added to ZEModel. (Rendering Normal, Tangent and Binormal lines)
+	FIX: ViewPosition bug fixed in ZEFixedMaterial Point Light.
+	BUG: Lightning is buggy in ZEFixedMaterial.
+	FIX: ZEModelResource material's specular factor and specular shiness bug fixed.
+	FIX: ZEMapResource material's specular factor and specular shiness bug fixed.
